Add map entity parsing and quest-map relations
Introduces MapEntityParser and MapSpawnParser to extract NPCs, portals, and mob spawns from xblock files, and links them to maps. Adds new SQL tables for map_npcs, map_portals, map_mobs, and quest_maps. Updates MapNameParser, NpcParser, and QuestParser to support new schema and relations. Refactors Program.cs to handle grouped table creation and view count preservation. Updates project files and dependencies for .NET 8 and Maple2.File.Parser.Tadeucci 2.3.4.

--- a/Maple2Storage/Maple2Storage.csproj
+++ b/Maple2Storage/Maple2Storage.csproj
@@ -3,14 +3,13 @@
   <PropertyGroup>
     <AssemblyName>Maple2Storage</AssemblyName>
     <RootNamespace>Maple2Storage</RootNamespace>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <LangVersion>10</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetZip" Version="1.16.0" />
-    <PackageReference Include="Maple2.File.Parser" Version="2.0.9" />
+    <PackageReference Include="Maple2.File.Parser.Tadeucci" Version="2.3.4" />
     <PackageReference Include="Pastel" Version="3.0.0" />
     <PackageReference Include="protobuf-net" Version="3.0.101" />
   </ItemGroup>
